--- a/Recess_Project_Template/src/our_app/website/templates/course.html
+++ b/Recess_Project_Template/src/our_app/website/templates/course.html
@@ -104,7 +104,7 @@
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item" aria-current="page"><a
                                             href="javascript:void(0)">Home</a></li>
-                                   
+
                                 </ol>
                             </nav>
                         </div>
@@ -115,18 +115,24 @@
     </section>
     <!-- ========================= page-banner-section end ========================= -->
 
-      <!-- ========================= contact-section start ========================= -->
+    <!-- ========================= contact-section start ========================= -->
     <section class="contact-section pt-130">
         <div class="container">
             <div class="row">
 
                 <div class="col-xl-12">
                     <div class="contact-form-wrapper">
-                       <div class="row">
+                        <div class="row">
                             <div class="col-xl-10 col-lg-8 mx-auto">
                                 <div class="section-title1 text-center mb-50">
-                                    <span class="wow fadeInDown" data-wow-delay=".2s" style="color: #333;">Hello! As a student, it's your right to evaluate your instructor in different aspects, so kindly take some little time to fill the form below, which is intended to provide us with feedback about your instructor of your choice according to the given fields.<br>
-                                    In doing this, it will help the institution to improve teaching and learning. Your response will be treated with utmost confidentiality. Respond without bias. Thank you.</span>
+                                    <span class="wow fadeInDown" data-wow-delay=".2s" style="color: #333;">Hello! As a
+                                        student, it's your right to evaluate your instructor in different aspects, so
+                                        kindly take some little time to fill the form below, which is intended to
+                                        provide us with feedback about your instructor of your choice according to the
+                                        given fields.<br>
+                                        In doing this, it will help the institution to improve teaching and learning.
+                                        Your response will be treated with utmost confidentiality. Respond without bias.
+                                        Thank you.</span>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +148,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <input type="text" name="Course Description" id="Description" placeholder="Course Description" required>
+                                    <input type="text" name="Course Description" id="Description"
+                                        placeholder="Course Description" required>
                                 </div>
                                 <div class="col-md-6">
                                     <input type="text" name="Course Remark" id="Remark" placeholder="Remark" required>
@@ -150,20 +157,21 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <textarea name="How to improve this course " id="improve" placeholder="Type improvement"
-                                        rows="5"></textarea>
+                                    <textarea name="How to improve this course " id="improve"
+                                        placeholder="Type improvement" rows="5"></textarea>
                                 </div>
                             </div>
-                             <div class="row">
+                            <div class="row">
                                 <div class="col-12">
-                                    <textarea name="What did you find wrong with this coure " id="Wrong" placeholder="Type wrong"
-                                        rows="5"></textarea>
+                                    <textarea name="What did you find wrong with this coure " id="Wrong"
+                                        placeholder="Type wrong" rows="5"></textarea>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
                                     <div class="button text-center">
-                                       <a href="{% url 'instructor'%}"><button type="submit" class="theme-btn">Send Message</button></a> 
+                                        <a href="{% url 'instructor'%}"><button type="submit" class="theme-btn">Send
+                                                Message</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -176,13 +184,17 @@
     <!-- ========================= contact-section end ========================= -->
 
 
-    <section id="contact" class="contact-section cta-bg img-bg pt-110 pb-100" >
+    <section id="contact" class="contact-section cta-bg img-bg pt-110 pb-100">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-5 col-lg-7">
                     <div class="section-title mb-60">
-                        <h2 class="text-white wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Thank you for participting in this exercise of rating your courses.</h2>
-                        <p class="text-white wow fadeInUp" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">Your Feedback helps us all.</p>
+                        <h2 class="text-white wow fadeInUp" data-wow-delay=".4s"
+                            style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Thank you for
+                            participting in this exercise of rating your courses.</h2>
+                        <p class="text-white wow fadeInUp" data-wow-delay=".6s"
+                            style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">Your Feedback
+                            helps us all.</p>
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-5">
