--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/courses.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/courses.html
@@ -370,7 +370,7 @@
         <div class="col-12">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Course table</h6>
+              <h6>Courses Feedback table</h6>
             </div>
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
@@ -378,55 +378,49 @@
                   <thead>
                     <tr>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Name</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description
+                      </th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Code</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
-                        Remark<th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                        Remark
+                      <th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         Improvement</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         No-Improvement</th>
-                        
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                        Action</th>
+
                       <th></th>
                     </tr>
                   </thead>
                   <tbody>
-                   <!--  <tr>
+                    <tr>
                       <td>
-                        <div class="d-flex px-2">
-                          <div>
-                            <img src="../assets/img/small-logos/logo-spotify.svg"
-                              class="avatar avatar-sm rounded-circle me-2" alt="spotify">
-                          </div>
-                          <div class="my-auto">
-                            <h6 class="mb-0 text-sm">Spotify</h6>
-                          </div>
-                        </div>
+                        <p class="text-sm font-weight-bold mb-0"></p>
                       </td>
                       <td>
-                        <p class="text-sm font-weight-bold mb-0">$2,500</p>
+                        <p class="text-sm font-weight-bold mb-0"></p>
                       </td>
                       <td>
-                        <span class="text-xs font-weight-bold">working</span>
+                        <p class="text-sm font-weight-bold mb-0"></p>
                       </td>
-                      <td class="align-middle text-center">
-                        <div class="d-flex align-items-center justify-content-center">
-                          <span class="me-2 text-xs font-weight-bold">60%</span>
-                          <div>
-                            <div class="progress">
-                              <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="60"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                            </div>
-                          </div>
-                        </div>
+                      <td>
+                        <p class="text-sm font-weight-bold mb-0"></p>
                       </td>
+                      <td>
+                        <p class="text-sm font-weight-bold mb-0"></p>
+                      </td>
+                      <td>
+                        <p class="text-sm font-weight-bold mb-0"></p>
+                      </td>
+
                       <td class="align-middle">
                         <button class="btn btn-link text-secondary mb-0">
                           <i class="fa fa-ellipsis-v text-xs"></i>
                         </button>
                       </td>
-                    </tr> -->
-
+                    </tr>
                   </tbody>
                 </table>
               </div>
