--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/instructors.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/instructors.html
@@ -370,68 +370,53 @@
         <div class="col-12">
           <div class="card mb-4">
             <div class="card-header pb-0">
-              <h6>Projects table</h6>
+              <h6>Courses Feedback table</h6>
             </div>
             <div class="card-body px-0 pt-0 pb-2">
               <div class="table-responsive p-0">
-               <table class="table align-items-center justify-content-center mb-0">
+                <!-- instructor_feedback_list.html -->
+
+                <table class="table align-items-center justify-content-center mb-0">
                   <thead>
                     <tr>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Instructor</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Dept</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Course Unit</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Course Unit
+                      </th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         Knowledge</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         Communication</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         Teaching</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
-                        Responsivenes</th>
-                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                        Responsiveness</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         Comments</th>
-                      <th></th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
+                        Action</th>
                     </tr>
                   </thead>
                   <tbody>
-                   <!--  <tr>
+                    {% for feedback in feedbacks %}
+                    <tr>
+                      <td>{{ feedback.instructorName }}</td>
+                      <td>{{ feedback.department }}</td>
+                      <td>{{ feedback.courseUnit }}</td>
+                      <td>{{ feedback.get_knowledge_display }}</td>
+                      <td>{{ feedback.get_communication_display }}</td>
+                      <td>{{ feedback.get_teachingStyle_display }}</td>
+                      <td>{{ feedback.get_responsiveness_display }}</td>
+                      <td>{{ feedback.additional_comments }}</td>
                       <td>
-                        <div class="d-flex px-2">
-                          <div>
-                            <img src="../assets/img/small-logos/logo-spotify.svg"
-                              class="avatar avatar-sm rounded-circle me-2" alt="spotify">
-                          </div>
-                          <div class="my-auto">
-                            <h6 class="mb-0 text-sm">Spotify</h6>
-                          </div>
-                        </div>
+                        <a href="{% url 'delete_instructor_feedback' feedback.id %}"
+                          class="btn btn-danger btn-sm">Delete</a>
                       </td>
-                      <td>
-                        <p class="text-sm font-weight-bold mb-0">$2,500</p>
-                      </td>
-                      <td>
-                        <span class="text-xs font-weight-bold">working</span>
-                      </td>
-                      <td class="align-middle text-center">
-                        <div class="d-flex align-items-center justify-content-center">
-                          <span class="me-2 text-xs font-weight-bold">60%</span>
-                          <div>
-                            <div class="progress">
-                              <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="60"
-                                aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                            </div>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="align-middle">
-                        <button class="btn btn-link text-secondary mb-0">
-                          <i class="fa fa-ellipsis-v text-xs"></i>
-                        </button>
-                      </td>
-                    </tr> -->
-
+                    </tr>
+                    {% endfor %}
                   </tbody>
                 </table>
+
               </div>
             </div>
           </div>
