--- a/Recess_Project_Template/src/our_app/website/templates/index.html
+++ b/Recess_Project_Template/src/our_app/website/templates/index.html
@@ -56,50 +56,59 @@
         </div>
     </header>
     <!-- About-->
-            <!-- Signup-->
-       <section class="signup-section text-white" id="signup">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                     
-                            <h2>provide your details in the space provided</h2>
-                            <form class="input-group-newsletter">
-                                <div class="form-group">
-                                    <label for="name">Name</label>
-                                    <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." aria-label="Enter your name..." data-sb-validations="required,name" />
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label for="phone">studentId</label>
-                                    <input class="form-control" id="studentId" name="studentId" type="text" placeholder="Enter your studentId..." aria-label="Enter your studentId..." data-sb-validations="required,contact" />
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label for="emailAddress">Email Address</label>
-                                    <input class="form-control" id="emailAddress" name="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" />
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label for="time">year of study</label>
-                                    <input class="form-control" id="year_of_study" name="year_of_study" type="text" placeholder="Enter your year of study..." aria-label="Enter your year of study..." data-sb-validations="required,contact" />
-                                </div>
-                                
-                                <div class="form-group m-5">
-                                    <button class="btn btn-primary disabled" id="submitButton" type="submit">Submit!</button>
-                                </div>
-                            </form>
-                            
-                            
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
-                         
-                        </form>
+    <!-- Signup-->
+    <section class="signup-section text-white" id="signup">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-md-10 col-lg-8 mx-auto text-center">
+                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
 
+                    <h2>provide your details in the space provided</h2>
+                    <form class="input-group-newsletter">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input class="form-control" id="name" name="name" type="text"
+                                placeholder="Enter your name..." aria-label="Enter your name..."
+                                data-sb-validations="required,name" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone">studentId</label>
+                            <input class="form-control" id="studentId" name="studentId" type="text"
+                                placeholder="Enter your studentId..." aria-label="Enter your studentId..."
+                                data-sb-validations="required,contact" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="emailAddress">Email Address</label>
+                            <input class="form-control" id="emailAddress" name="emailAddress" type="email"
+                                placeholder="Enter email address..." aria-label="Enter email address..."
+                                data-sb-validations="required,email" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="time">year of study</label>
+                            <input class="form-control" id="year_of_study" name="year_of_study" type="text"
+                                placeholder="Enter your year of study..." aria-label="Enter your year of study..."
+                                data-sb-validations="required,contact" />
+                        </div>
+
+                        <div class="form-group m-5">
+                            <button class="btn btn-primary disabled" id="submitButton" type="submit">Submit!</button>
+                        </div>
+                    </form>
+
+
+                    <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.
                     </div>
+                    <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
+
+                    </form>
+
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
     <!-- Contact-->
     <section class="contact-section bg-black">
         <div class="container px-4 px-lg-5">
@@ -110,7 +119,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">Makerere,  Kawempe</div>
+                            <div class="small text-black-50">Makerere, Kawempe</div>
                         </div>
                     </div>
                 </div>
